Removed invite image in index.html

--- a/index.html
+++ b/index.html
@@ -164,21 +164,17 @@
 
   <section id="invite" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(img/overlay-bg.jpg)">
     <div class="overlay-mf"></div>
-    <div class="container">
-      <h5 class="title-left">
-        Invite Yulin! </br>
-      </h5>
-    </div>
     <footer>
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
             <div class="copyright-box">
-              <a href="https://discordapp.com/oauth2/authorize?client_id=585808405781020682&scope=bot&permissions=314432">
-                <img alt="Invite Link" src="img/invite.png" width=100%" class="img-fluid">
-              </a>
-              <hr>
               <div class="credits">
+                <h3>
+                  <a href="https://discordapp.com/oauth2/authorize?client_id=585808405781020682&scope=bot&permissions=314432">Bot Invite | </a>
+                  <a href="https://discord.gg/XKPgH5q">Support Server</a></br></br>
+                </h3>
+                
                 Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a></br>
                 Edited by <strong>Kaoffie</strong> for the Yulin project.
               </div>
