Added more dictionary types

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="table-cell">
         <div class="container">
           <h1 class="intro-title mb-4">語林 Yulin</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Chinese-English Dictionary,Stroke Order Lookup,Full Kangxi Dictionary,Pinyin/Zhuyin Conversion</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Mandarin/Cantonese Dictionaries,Stroke Order Lookup,Full Kangxi Dictionary,Pinyin/Zhuyin Conversion</span><strong class="text-slider"></strong></p>
         </div>
       </div>
     </div>
@@ -93,9 +93,9 @@
               </div>
               <div class="work-content">
                 <div class="col-sm-10">
-                  <h2 class="w-title">Bilingual Dictionary</h2>
+                  <h2 class="w-title">Wide Dictionary Selection</h2>
                   <div class="w-more">
-                    With pinyin search, wildcards, and reaction-based selection menu.
+                    Mandarin, Cantonese, Hakka, and Taiwanese Hokkien Dictionaries, as well as Monolingual Dictionaries and a French-Chinese Dictionary.
                   </div>
                 </div>
                 <div class="row"> </div>
@@ -113,7 +113,7 @@
                 <div class="col-sm-10">
                   <h2 class="w-title">Stroke Order Lookup</h2>
                   <div class="w-more">
-                    Custom stroke order engine with custom character support.
+                    Custom stroke order engine with custom character support; Moedict stroke order search with historical and cursive stroke orders.
                   </div>
                 </div>
                 <div class="row"> </div>
@@ -171,8 +171,8 @@
             <div class="copyright-box">
               <div class="credits">
                 <h3>
-                  <a href="https://discordapp.com/oauth2/authorize?client_id=585808405781020682&scope=bot&permissions=314432">Bot Invite | </a>
-                  <a href="https://discord.gg/XKPgH5q">Support Server</a></br></br>
+                  <a href="https://discordapp.com/oauth2/authorize?client_id=585808405781020682&scope=bot&permissions=314432">Invite Link | </a>
+                  <a href="https://discord.gg/XKPgH5q">Join Server</a></br></br>
                 </h3>
                 
                 Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a></br>
